completd Toggle the displaying of that paragraph with the button created in the

--- a/basics-assignment-3-start/src/app/app.component.html
+++ b/basics-assignment-3-start/src/app/app.component.html
@@ -2,11 +2,36 @@
   <div class="row">
     <div class="col-xs-12">
       <ol>
-        <li>Add A button which says 'Display Details'</li>
-        <li>Add a paragraph with any content of your choice (e.g. 'Secret Password = tuna')</li>
-        <li>Toggle the displaying of that paragraph with the button created in the first step</li>
-        <li>Log all button clicks in an array and output that array below the secret paragraph (maybe log a timestamp or simply an incrementing number)</li>
-        <li>Starting at the 5th log item, give all future log items a blue background (via ngStyle) and white color (ngClass)</li>
+        <!-- <li>Add A button which says 'Display Details'</li> -->
+        <button class="btn" (click)="onchangeparagraph()">
+          Display Details
+        </button>
+        <!-- <li>
+          Add a paragraph with any content of your choice (e.g. 'Secret Password
+          = tuna')
+        </li> -->
+        <li *ngIf="paragraph">Secret Password = next</li>
+        <li
+          *ngFor="let userClick of usersClicks"
+          [ngClass]="{ five: userClick > 4 }"
+          [ngStyle]="{ backgroundColor: userClick >= 5 ? 'blue' : 'white' }"
+        >
+          {{ userClick }}
+        </li>
+
+        <!-- <li>
+          Toggle the displaying of that paragraph with the button created in the
+          first step
+        </li> -->
+        <!-- <li>
+          Log all button clicks in an array and output that array below the
+          secret paragraph (maybe log a timestamp or simply an incrementing
+          number)
+        </li> -->
+        <!-- <li>
+          Starting at the 5th log item, give all future log items a blue
+          background (via ngStyle) and white color (ngClass)
+        </li> -->
       </ol>
     </div>
   </div>
